--- a/examples/rules_js/MODULE.bazel
+++ b/examples/rules_js/MODULE.bazel
@@ -7,20 +7,20 @@ local_path_override(
 playwright = use_extension("@mrmeku_rules_playwright//playwright:extensions.bzl", "playwright")
 playwright.repo(
     name = "playwright",
-    browsers_json = "//:browsers.1.50.1.json",
+    playwright_version = "1.57.0",
     # Derived from running //:playwright_integrity_map
     integrity_map = {
-        "builds/chromium/1155/chromium-headless-shell-mac-arm64.zip": "sha256-a499efe4d7e8b2dec1b654a51b524fce94078335e5c5ead91f20e8577ff534cd",
-        "builds/chromium/1155/chromium-headless-shell-linux.zip": "sha256-3536f44d07d251389a57be819cdb2ea724c5c9b6b1eb0eddd8a37c547cc05234",
-        "builds/firefox/1471/firefox-mac-arm64.zip": "sha256-f852c48e60b5ca99c023f0d0638b8986dc779103cde265fc2c2d13584b7dc7d6",
-        "builds/webkit/2123/webkit-mac-14-arm64.zip": "sha256-4621d40c13d50d19679201d7cdaa1e41e031792bcc89634ea6197f1a5123e5a0",
+        "builds/firefox/1497/firefox-ubuntu-20.04.zip": "sha256-39c11a511bb33392316af94c7e69fa6aee7f6ce19c511ed039612a2d8c5de430",
+        "builds/webkit/2227/webkit-mac-15-arm64.zip": "sha256-70a6d62ce9f0280c6a56e0b548e98b4eeebd29be047769a6381c23e568034f44",
+        "builds/chromium/1200/chromium-headless-shell-linux.zip": "sha256-a9a525cb3832d59a810f78f8ba6c5ed3592a6a488984627f5d827c2a365c8a5a",
         "builds/webkit/2092/webkit-ubuntu-20.04.zip": "sha256-e1d1db96e964c578958958fc22b87acf3ab53ec54245f8e07925a90c7999fb44",
-        "builds/firefox/1471/firefox-ubuntu-20.04.zip": "sha256-10113c986a9e0452f02e39ebacfca4777ba8740eecd909bcdc81c6f6740ce79a",
+        "builds/chromium/1200/chromium-headless-shell-mac-arm64.zip": "sha256-e1620402b69716fa17e38e394c34121ac64c054251803cb13dde58458136e03c",
+        "builds/firefox/1497/firefox-mac-arm64.zip": "sha256-fed31d85a35d117f28a67416b76e190e41e7e2ada66309266d89b9cb0d6d03ee"
     },
 )
 use_repo(playwright, "playwright")
 
-bazel_dep(name = "aspect_rules_js", version = "2.1.2")
+bazel_dep(name = "aspect_rules_js", version = "2.9.2")
 
 npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
 npm.npm_translate_lock(
