--- a/examples/rules_js/.bazelrc
+++ b/examples/rules_js/.bazelrc
@@ -1,3 +1,5 @@
 startup --host_jvm_args=-DBAZEL_TRACK_SOURCE_DIRECTORIES=1
 common --enable_bzlmod
 common --@mrmeku_rules_playwright//:macos_version=14
+
+test --test_output=streamed
