Add diff test to ensure the release stays up to date

--- a/tools/release/BUILD.bazel
+++ b/tools/release/BUILD.bazel
@@ -48,11 +48,10 @@ copy_to_directory(
 
 write_source_file(
     name = "copy_release_artifacts",
-    diff_test = False,
+    diff_test = True,
     executable = True,
     in_file = ":release_artifacts",
     out_file = "artifacts",
-    tags = ["manual"],
 )
 
 native_binary(
